[package]
name = "chatwork_oauth"
version = "0.1.0"
authors = ["louvre2489 <louvre2489@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.8"
envconfig = "0.9.1"
envconfig_derive = "0.9.1"
base64 = "0.13.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.37"
serde_json = "1.0.61"
argopt = "0.1.1"
structopt = "0.3.21"
